Edits in Animations

--- a/src/app/features/Home/home/home.html
+++ b/src/app/features/Home/home/home.html
@@ -185,7 +185,7 @@
                 }
             </div>
 
-            <div class="d-flex justify-content-center align-content-center my-5">
+            <div class="d-flex justify-content-center align-content-center my-5 fade-line">
                 <button class="explore-btn" routerLink="/explore"> Explore All Jobs <i class="bi bi-arrow-right mx-3"></i></button>
             </div>
            
