--- a/src/app/features/Jobs/job-saved-view/job-saved-view.html
+++ b/src/app/features/Jobs/job-saved-view/job-saved-view.html
@@ -2,35 +2,35 @@
     <div class="row">
         <div class="col-lg-9">
             <div class="row">
-                <div class="col-1">
-                    <div class="comp-logo fa-hands-american-sign-language-interpreting fade-line">
+                <div class="col-1 fade-line">
+                    <div class="comp-logo fa-hands-american-sign-language-interpreting">
                         <i class="bi bi-buildings"></i>
                     </div>
                 </div>
 
-                <div class="job-data col-lg-9">
-                    <h3 class="fade-line">{{job.jobTitle}}</h3>
-                    <span class="fade-line">{{job.companyName}}</span>
+                <div class="job-data col-lg-9 fade-line">
+                    <h3>{{job.jobTitle}}</h3>
+                    <span>{{job.companyName}}</span>
                     <div class="my-1">
                     <div class="d-flex">
-                        <div class="d-flex my-1 me-4 fade-line">
+                        <div class="d-flex my-1 me-4">
                             <i class="bi bi-geo-alt me-2"></i>
                             <span>{{job.location}}</span>
                         </div>
-                        <div class="d-flex my-1 fade-line">
+                        <div class="d-flex my-1">
                             <i class="bi bi-clock me-2"></i>
                             <span>Saved At : {{job.savedAt | date:'MMM dd, yyyy - hh:mm a'}}</span>
                         </div>
                     </div>
-                    <div class="my-1 fade-line">
+                    <div class="my-1">
                         <span><i class="bi bi-currency-dollar me-2"></i>{{ job.salary | currency:'USD':'symbol' }}</span>
                     </div>
 
                     <div class="row my-2">
-                        <div class="workplace-type fade-line ">
+                        <div class="workplace-type">
                             <span> {{job.workplaceType}} </span>
                         </div>
-                        <div class="job-type col-lg-3 fade-line">
+                        <div class="job-type col-lg-3">
                             <span> {{job.jobType}} </span>
                         </div>
                     </div>
@@ -51,15 +51,15 @@
 
         </div>
 
-        <div class="col-lg-3 col-md-12">
+        <div class="col-lg-3 col-md-12 fade-line">
             <div>
-                <div class="d-flex justify-content-end mb-5 fade-line" *ngIf="!isAdmin() && !isEmployer()">
+                <div class="d-flex justify-content-end mb-5" *ngIf="!isAdmin() && !isEmployer()">
                     <button class="save-job-btn" (click)="AddToSaved()" [class.saved]="isSavedFlag()">
                         <i class="bi" [class.bi-bookmark-check]="isSavedFlag()" [class.bi-bookmark]="!isSavedFlag()"></i>
                     </button>
                 </div>
                 <div class="d-flex justify-content-end flex-column">
-                    <div *ngIf="!isAdmin() && !isEmployer()" class="fade-line">
+                    <div *ngIf="!isAdmin() && !isEmployer()">
                         <!-- Show Apply Now button if not applied -->
                         <button 
                             class="apply-now-btn my-2 form-control" 
