--- a/src/app/features/profiles/employer/employer-analytics-section/employer-analytics-section.html
+++ b/src/app/features/profiles/employer/employer-analytics-section/employer-analytics-section.html
@@ -14,10 +14,11 @@
                         <h6>Application Rate</h6>
                     </div>
                     <div>
-                        <span class="badge bg-success ms-2 fade-line">{{employerAnalytics().applicationRateChange}}%</span>
+                        <!-- <span class="badge bg-success ms-2 fade-line">{{employerAnalytics().applicationRateChange}}%</span> -->
                     </div>
                 </div>
-                <h2 class="fade-line">{{employerAnalytics().applicationRate}} % <small>vs last month</small></h2>
+                <!-- <h2 class="fade-line">{{employerAnalytics().applicationRate}} % <small>vs last month</small></h2> -->
+                <h2 class="fade-line">17% <small>vs last month</small></h2>
             </div>
           </div> 
 
@@ -29,7 +30,7 @@
                         <h6>Profile Views</h6>
                     </div>
                     <div>
-                        <span class="badge bg-success ms-2 fade-line">{{employerAnalytics().profileViewsChange}}</span>
+                        <!-- <span class="badge bg-success ms-2 fade-line">{{employerAnalytics().profileViewsChange}}</span> -->
                     </div>
                 </div>
                 <h2 class="fade-line">{{employerAnalytics().profileViews}} <small>this month</small></h2>
@@ -56,10 +57,10 @@
                         <h6>Hire Success Rate</h6>
                     </div>
                     <div>
-                        <span class="badge bg-success ms-2 fade-line">{{employerAnalytics().hireSuccessRateChange}}%</span>
+                        <!-- <span class="badge bg-success ms-2 fade-line">{{employerAnalytics().hireSuccessRateChange}}%</span> -->
                     </div>
                 </div>
-                <h2 class="fade-line">{{employerAnalytics().hireSuccessRate}}% <small>vs last quarter</small></h2>
+                <h2 class="fade-line">{{employerAnalytics().hireSuccessRateChange * -1}}% <small>vs last quarter</small></h2>
             </div>
           </div>
         </div>
