--- a/src/app/features/profiles/employer/employer-analytics-section/employer-analytics-section.html
+++ b/src/app/features/profiles/employer/employer-analytics-section/employer-analytics-section.html
@@ -45,7 +45,7 @@
                         <h6>Time to Hire</h6>
                     </div>
                 </div>
-                <h2 class="fade-line">{{employerAnalytics().timeToHire}} days <small>average</small></h2>
+                <h2 class="fade-line">{{employerAnalytics().timeToHire * -1}} days <small>average</small></h2>
             </div>
           </div>
 
