--- a/src/app/features/Application/app-view-seeker/app-view-seeker.html
+++ b/src/app/features/Application/app-view-seeker/app-view-seeker.html
@@ -24,25 +24,25 @@
 
 
                 <div *ngIf="applicationsList().length > 0" class="application-list">
-                    <div *ngFor="let app of applicationsList(); trackBy: trackByApplicationId" class="application-card animate-on-scroll" [routerLink]="['/jobDtl',app.jobId]">
-                        <div class="card-left row fade-line">
-                            <div class="col-lg-1 fade-line">
+                    <div *ngFor="let app of applicationsList(); trackBy: trackByApplicationId" class="application-card" [routerLink]="['/jobDtl',app.jobId]">
+                        <div class="card-left row ">
+                            <div class="col-lg-1 ">
                                 <img src="{{app.companyImage}}"> 
                             </div>
                             <div class="applicant-info col-lg-8" >
-                                <div class="d-flex fade-line">
+                                <div class="d-flex ">
                                     <h4 style="padding-top: 2px;">{{app.jobTitle}}</h4>
                                 </div>
-                                <div class="d-flex fade-line">
+                                <div class="d-flex ">
                                     <p>{{app.companyName}} - </p><p style="color:rgb(123, 122, 122)">{{app.companyLocation}}</p>
                                 </div>
-                                <div class="d-flex mt-2 fade-line">
+                                <div class="d-flex mt-2 ">
                                     <i class="bi bi-calendar-check me-2 mt-1"></i><p class="mt-1">{{app.appliedDate}}</p>
                                 </div>
 
                             </div>
                         </div>
-                        <div class="card-right fade-line">
+                        <div class="card-right ">
 
                             <span class="status" [ngClass]="getStatusClass(app.status)">
                                 {{app.status}}
