--- a/src/app/features/Application/app-view-emp/app-view-emp.html
+++ b/src/app/features/Application/app-view-emp/app-view-emp.html
@@ -70,7 +70,7 @@
             </button>
         </div>
 
-        <div class="applications-section my-3 fade-line">
+        <div class="applications-section my-3 fade-line is-visible">
             <div *ngIf="isLoading()"><app-loading-page></app-loading-page></div>
 
             <div *ngIf="!isLoading()" class="results-container">
